# prefect-flows

./: .gitignore  deployment_one.yaml  deployment_two.yaml  prefect.toml  pyproject.toml  requirements.txt
configs/: kohls_export_so_creation.yaml  template_process.yaml
src/prefect_flows/: __init__.py
src/prefect_flows/template_flow/: main.py
